// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form renders with out crashing 1`] = `
<form
  class=""
  data-testid="theForm"
  style="background-color: rgba(0, 0, 0, 0.4); color: rgb(255, 255, 255); padding: 0px 10px; width: 320px;"
>
  <div
    class="form-group"
  >
    <label
      class=""
      for="name"
      style="font-weight: bolder;"
    >
      Name:
    </label>
    <input
      class="form-control"
      id="name"
      name="name"
      placeholder="Name..."
      required=""
      type="text"
      value=""
    />
    <small
      class="form-text text-muted"
    >
      What name can I refer to you as?
    </small>
  </div>
  <div
    class="form-group"
  >
    <label
      class=""
      for="email"
      style="font-weight: bolder;"
    >
      Email:
    </label>
    <input
      class="form-control"
      id="email"
      name="email"
      placeholder="Email..."
      required=""
      type="email"
      value=""
    />
    <small
      class="form-text text-muted"
    >
      You will not recieve any spam or emails period.
    </small>
  </div>
  <div
    class="form-group"
  >
    <label
      class=""
      for="message"
      style="font-weight: bolder;"
    >
      Message:
    </label>
    <textarea
      class="form-control"
      id="message"
      name="message"
      placeholder="Message..."
      required=""
    />
    <small
      class="form-text text-muted"
    >
      <span
        class="sc-AxjAm bfepVn"
      />
      <span
        class="sc-AxirZ CaKOU"
      />
    </small>
  </div>
  <button
    class="btn btn-secondary"
    style="background-color: rgba(0, 0, 0, 0.2); border: double azure; font-size: 1.3rem; cursor: pointer; margin-bottom: 15px;"
  >
    Send
  </button>
</form>
`;

exports[`labels render and have proper text titles 1`] = `
<input
  class="form-control"
  id="name"
  name="name"
  placeholder="Name..."
  required=""
  type="text"
  value=""
/>
`;

exports[`labels render and have proper text titles 2`] = `
<input
  class="form-control"
  id="email"
  name="email"
  placeholder="Email..."
  required=""
  type="email"
  value=""
/>
`;

exports[`labels render and have proper text titles 3`] = `
<textarea
  class="form-control"
  id="message"
  name="message"
  placeholder="Message..."
  required=""
/>
`;
